# respite

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  PLAN.md  README.md  STRICT_BREAK_PLAN.md  com.texoviva.respite.json  com.texoviva.respite.json~  io.github.pawanrai9999.respite.json  meson.build
.github/workflows/: ci.yml  pages.yml
data/: com.texoviva.respite.desktop.in  com.texoviva.respite.gschema.xml  com.texoviva.respite.metainfo.xml.in  com.texoviva.respite.service.in  io.github.pawanrai9999.respite.desktop.in  io.github.pawanrai9999.respite.gschema.xml  io.github.pawanrai9999.respite.metainfo.xml.in  io.github.pawanrai9999.respite.service.in  meson.build
data/icons/: meson.build
extension/: README.md  dbus-interface.xml  extension.js  install.sh  metadata.json  stylesheet.css  test-dbus.sh
po/: POTFILES.in  meson.build  respite.pot
src/: main.c  meson.build  respite-application.c  respite-application.h  respite-background.c  respite-background.h  respite-overlay.c  respite-overlay.css  respite-overlay.h  respite-overlay.ui  respite-strict.c  respite-strict.h  respite-timer.c  respite-timer.h  respite-window.c  respite-window.h  respite-window.ui  respite.gresource.xml
